--- a/projeto/src/main/webapp/style.css
+++ b/projeto/src/main/webapp/style.css
@@ -7,21 +7,55 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-header {
-  margin-top: 30px;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.title {
-  margin: 0px;
+.header {
+  background-color: turquoise;
+  padding: 25px 20px 15px;
+  border-bottom: 1px solid black;
+}
+
+.header > .title {
+  margin: 0 auto;
   text-align: center;
   font-size: 30px;
+  width: 600px;
+}
+
+.header > .nav-menu {
+  width: 600px;
+  margin: 20px auto 0;
+}
+
+.header > .nav-menu > ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.header > .nav-menu > ul > li > a:hover {
+  color: white;
+}
+
+main {
+  width: 600px;
+  margin: 0 auto 20px;
+}
+
+.subtitle {
+  margin: 20px 0;
 }
 
 .list {
   margin: 20px auto 0;
   border-radius: 10px;
   box-shadow: 2px 3px 10px rgb(0 0 0 / 20%);
-  width: 250px;
+  width: 100%;
   padding: 15px;
 }
 
@@ -30,7 +64,7 @@ header {
 }
 
 .list > li:not(.list > li:last-child) {
-  margin-bottom: 7px;
+  margin-bottom: 15px;
 }
 
 .list > li > a {
@@ -38,6 +72,58 @@ header {
   text-decoration: none;
 }
 
-.list > li > a:visited {
-  color: black;
+.list > li > a:hover {
+  color: turquoise;
 }
+
+.form {
+  width: 100%;
+}
+
+.form > .field {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form > .field > label {
+  color: gray;
+  font-size: 13px;
+}
+
+.form > .field > input, .form > .field > select {
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 100%;
+  height: 25px;
+  padding: 0 5px;
+}
+
+.button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.table {
+  width: 100%;
+  text-align: left;
+}
+
+.table, .table th, .table td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.table th, .table td {
+  padding: 2px 10px;
+}
+
+.table tr:nth-child(even){
+  background-color: #f4f4f4;
+}
+
